Table now wraps correctly with large event descriptions

--- a/static/css/flat.css
+++ b/static/css/flat.css
@@ -104,4 +104,5 @@ div.log .message:last-child .part
 div.log .message .part:last-child
 {
   border-right: 0;
+  word-break: break-all;
 }
